--- a/src/components/pages/Chats/Chat/Chat.module.scss
+++ b/src/components/pages/Chats/Chat/Chat.module.scss
@@ -1,7 +1,7 @@
 .chat {
   box-sizing: border-box;
-  width: 50%;
-  margin: 0 auto;
+  width: 100%;
+  
   padding: 20px 40px;
   border-top: 1px solid rgba(122, 122, 122, 0.144);
   border-bottom: 1px solid rgba(122, 122, 122, 0.164);
@@ -48,6 +48,20 @@
   }
 }
 
+
+
+@media (max-width: 768px) {
+  .chat {
+    background-color: inherit;
+    border-top: 1px solid rgba(122, 122, 122, 0.322);
+    border-bottom: 1px solid rgba(122, 122, 122, 0.322);
+    border-radius: 0;
+    width: 100%;
+    margin: 0;
+    animation: chatMobile 0.5s forwards;
+  }
+}
+
 @keyframes chatMobile {
   0% {
     opacity: 0;
@@ -58,3 +72,6 @@
     margin-top: 0px;
   }
 }
+
+
+
