--- a/src/components/pages/Chats/Chats.module.scss
+++ b/src/components/pages/Chats/Chats.module.scss
@@ -1,4 +1,17 @@
 .chats{
     width: 100%;
     margin-top: 30px;
+    display: flex;
+   justify-content: space-between;
+}
+
+
+.chatsTitles{
+    width: 100%;
+    margin-right: 50px;
+  }
+
+
+.dialog{
+    width: 100%;
 }
