--- a/src/components/pages/Chats/dialog/dialog.module.scss
+++ b/src/components/pages/Chats/dialog/dialog.module.scss
@@ -2,3 +2,28 @@
     width: 100%;
     max-width: 400px;
 }
+
+
+@media (max-width: 1400px) {
+    .dialog{
+        width: 100%;
+        max-width: 100%;
+
+        &__title{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            font-size: 20px;
+            color: white;
+            padding: 25px 0px 15px;
+
+            &_img{
+                margin-right: 20px;
+                width: 35px;
+                height: 35px;
+                border-radius: 50%;
+            }
+        }
+    }
+}
