--- a/src/components/pages/auth/authorisation.module.scss
+++ b/src/components/pages/auth/authorisation.module.scss
@@ -1,26 +1,27 @@
 @font-face {
-    font-family: 'Montserrat-Black.ttf';
-    src: url(@/src/fonts/Montserrat-Black.ttf) format('truetype');
-    font-weight: 400;
-    font-style: normal;
-  }
-
-.buttons{
- margin: 0 auto;
- 
+  font-family: "Montserrat-Black.ttf";
+  src: url(@/src/fonts/Montserrat-Black.ttf) format("truetype");
+  font-weight: 400;
+  font-style: normal;
 }
 
+.buttons {
+  margin: 0 auto;
+}
 
-.button{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: rgb(235, 235, 235);
-    text-align: center;
-    font-weight: 600;
-    font-size: 16px;
-    padding: 15px;
-    background-color: #2d81ff;
-    width: 20%;
-    cursor: pointer;
-    margin: 20px 50px;
-    border-radius: 30px;
+.button {
+  
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  color: rgb(235, 235, 235);
+  text-align: center;
+  font-weight: 600;
+  font-size: 16px;
+  padding: 15px;
+  background-color: #2d81ff;
+  width: 20%;
+  cursor: pointer;
+  margin: 20px 50px;
+  border-radius: 30px;
+  border: none;
 }
