--- a/src/components/pages/auth/authorisation.module.scss
+++ b/src/components/pages/auth/authorisation.module.scss
@@ -5,12 +5,8 @@
   font-style: normal;
 }
 
-.buttons {
-  margin: 0 auto;
-}
-
 .button {
-  
+  position: relative;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   color: rgb(235, 235, 235);
@@ -19,9 +15,41 @@
   font-size: 16px;
   padding: 15px;
   background-color: #2d81ff;
-  width: 20%;
+  max-width: 25%;
+  width: 100%;
+  display: block;
   cursor: pointer;
-  margin: 20px 50px;
+  margin: 20px auto;
   border-radius: 30px;
   border: none;
+
+  & img {
+    margin-top: -12px;
+    top: 50%;
+    position: absolute;
+    left: 25px;
+  }
+}
+
+.AuthPage {
+  margin: 0 auto;
+  max-width: 90%;
+  &__title {
+    margin-top: 50px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 28px;
+    color: white;
+    font-weight: 600;
+    text-align: center;
+  }
+
+  &__subtitle {
+    max-width: 40%;
+    margin: 30px auto;
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
+    font-size: 20px;
+    color: rgb(80, 80, 80);
+  }
 }
