--- a/src/components/pages/Chats/dialog/message/message.module.scss
+++ b/src/components/pages/Chats/dialog/message/message.module.scss
@@ -1,10 +1,16 @@
+.message__wrap {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+}
+
 .message {
   color: white;
   background-color: rgb(22, 22, 22);
 
   position: relative;
   justify-content: space-around;
-  
+  max-width: 400px;
   margin-bottom: 20px;
   box-sizing: border-box;
   padding: 20px;
@@ -15,7 +21,9 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
-   
+    top: 100%;
+
+    margin-top: -40px;
   }
 
   &__title {
@@ -30,16 +38,14 @@
     font-size: 12px;
     color: rgb(87, 87, 87);
     position: relative;
-    
+
     display: inline;
   }
 }
 
-
-
-@media (max-width: 1400px){
-  .message{
-    &__img{
+@media (max-width: 1400px) {
+  .message {
+    &__img {
       display: none;
     }
     &__title {
@@ -47,5 +53,18 @@
     }
 
     padding: 20px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .message__wrap {
+    width: 95%;
+  }
+}
+
+
+@media (max-width: 500px) {
+  .message{
+    max-width: 300px;
   }
 }
