--- a/src/components/pages/SearchPage/categories/card/Card.module.scss
+++ b/src/components/pages/SearchPage/categories/card/Card.module.scss
@@ -2,6 +2,8 @@
   color: white;
   z-index: 100;
   padding: 20px;
+
+
 }
 
 .card {
@@ -11,33 +13,32 @@
   height: 60px;
   font-size: 20px;
   font-weight: 600;
-  
+
   cursor: pointer;
   animation: card 0.5s forwards;
   transition: all 0.3s;
-}
 
-.img {
-  background-repeat: no-repeat;
-  background-size: cover;
-  top: 0;
-  left: 0;
-  transition: all 0.2s;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  position: absolute;
-  &:hover {
-    background-color: black;
-
+  .img {
+    background-repeat: no-repeat;
+    background-size: cover;
+    top: 0;
+    left: 0;
+    transition: all 0.2s;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    position: absolute;
     filter: brightness(1) opacity(0.2) blur(2px);
+    &:hover {
+      background-color: black;
+      filter: none;
+    }
   }
 }
 
 @media (min-width: 1400px) {
   .card {
     height: 200px;
-    
   }
 
   .title {
@@ -49,9 +50,9 @@
   .title {
     padding: 0px;
   }
-  .img{
-    transition: all .1s;
-}
+  .img {
+    transition: all 0.1s;
+  }
 }
 @keyframes card {
   0% {
