--- a/src/components/pages/SearchPage/users/users.module.scss
+++ b/src/components/pages/SearchPage/users/users.module.scss
@@ -21,6 +21,7 @@
 
 .searchStr {
   color: rgb(161, 161, 161);
-  font-size: 15px;
+  font-size: 18px;
+  font-weight: 500;
   text-align: center;
 }
