--- a/src/components/pages/Chats/Chats.module.scss
+++ b/src/components/pages/Chats/Chats.module.scss
@@ -1,3 +1,4 @@
+@import '../../../utils/variables.scss';
 .chats {
   width: 100%;
   margin-top: 30px;
@@ -17,5 +18,9 @@
 .not__auth {
   text-align: center;
   margin-top: 30px;
-  color: white;
+  color: $text;
+  a{
+    color: $text;
+    text-decoration: underline;
+  }
 }
