--- a/src/components/pages/detailImage/image.module.scss
+++ b/src/components/pages/detailImage/image.module.scss
@@ -66,3 +66,26 @@
       margin-top: 15px;
   }
 }
+
+
+.gif__wrap{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  &_play{
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    fill: white;
+    top: 50%;
+    left: 50%;
+    margin-left: -75px;
+    margin-top: -75px;
+    cursor: pointer;
+    opacity: .6;
+    transition: all .6s;
+    &:hover{
+      transform: rotate(120deg);
+    }
+  }
+}
