--- a/src/styles/image/image.module.scss
+++ b/src/styles/image/image.module.scss
@@ -2,6 +2,7 @@
 .image {
   color: $text;
   margin-top: 20px;
+  animation: image 0.3s forwards;
   &__gif {
     width: 100%;
   }
@@ -37,8 +38,8 @@
 
   &__author {
     margin-top: 30px;
-    &_wrap{
-        width: 140px;
+    &_wrap {
+      width: 140px;
     }
     &_title {
       font-size: 18px;
@@ -56,23 +57,22 @@
   &__tags {
     margin-top: 20px;
     display: flex;
-    
-    &_tags{
-        margin-left: 10px;
-        width: 100%;
+
+    &_tags {
+      margin-left: 10px;
+      width: 100%;
     }
   }
-  &__category{
-      margin-top: 15px;
+  &__category {
+    margin-top: 15px;
   }
 }
 
-
-.gif__wrap{
+.gif__wrap {
   width: 100%;
   height: 100%;
   position: relative;
-  &_play{
+  &_play {
     position: absolute;
     width: 150px;
     height: 150px;
@@ -82,10 +82,23 @@
     margin-left: -75px;
     margin-top: -75px;
     cursor: pointer;
-    opacity: .6;
-    transition: all .6s;
-    &:hover{
+    opacity: 0.6;
+    transition: all 0.6s;
+    &:hover {
       transform: rotate(120deg);
     }
+  }
+}
+
+@keyframes image {
+  0% {
+    opacity: 0;
+   transform: translateX(-100%);
+  }
+ 
+  100% {
+    opacity: 1;
+    margin-top: 20px;
+    transform: translateX(0%);
   }
 }
