--- a/src/styles/NavBar/NavBar.scss
+++ b/src/styles/NavBar/NavBar.scss
@@ -24,9 +24,9 @@
   position: absolute;
   right: 2%;
   top: 50%;
-  margin-top: -15px;
-  width: 30px;
-  height: 30px;
+  margin-top: -25px;
+  width: 50px;
+  height: 50px;
   background-color: white;
   border-radius: 50%;
   text-align: unset;
@@ -36,4 +36,11 @@
 }
 .user:hover {
   opacity: 1;
+}
+
+.user__logo {
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  border-radius: 50%;
 }
