fix tags, add adaptive on pc version on user page

--- a/src/styles/search/index.scss
+++ b/src/styles/search/index.scss
@@ -1,3 +1,7 @@
-.tag.active{
-    background-color: green;
+.tag.active {
+  background-color: green;
+}
+
+.tags .swiper-wrapper {
+  justify-content: center;
 }
