--- a/src/styles/image/image.module.scss
+++ b/src/styles/image/image.module.scss
@@ -6,6 +6,8 @@
   max-width: 1200px;
   margin: 0 auto;
   &__gif {
+    height: auto;
+    object-fit: cover;
     width: 100%;
   }
 
@@ -70,11 +72,15 @@
   &__category {
     margin-top: 15px;
   }
+  &__tape{
+    max-height: 600px;
+    height: 100%;
+  }
 }
 
 .gif__wrap {
   width: 100%;
-  height: 100%;
+  height: auto;
   position: relative;
   &_play {
     position: absolute;
@@ -94,6 +100,8 @@
   }
 }
 
+
+
 @keyframes image {
   0% {
     opacity: 0;
@@ -104,5 +112,26 @@
     opacity: 1;
     margin-top: 20px;
     transform: translateX(0%);
+  }
+}
+
+@media (min-width: 1200px) {
+  .image {
+    &__wrap {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+    &__tape {
+      display: grid;
+      grid-template-columns: repeat(8, 1fr);
+      grid-template-rows: repeat(8, 5vw);
+      grid-gap: 5px;
+      &_item {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
   }
 }
