--- a/src/styles/search/searchpage.module.scss
+++ b/src/styles/search/searchpage.module.scss
@@ -1,8 +1,6 @@
-.tags {
-  display: grid;
-  align-items: center;
-  justify-content: space-around;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+
+
+.container {
+  margin: 20px auto;
+  max-width: 1200px;
 }
