--- a/src/styles/image/image.module.scss
+++ b/src/styles/image/image.module.scss
@@ -72,7 +72,7 @@
   &__category {
     margin-top: 15px;
   }
-  &__tape{
+  &__tape {
     max-height: 600px;
     height: 100%;
   }
@@ -100,8 +100,6 @@
   }
 }
 
-
-
 @keyframes image {
   0% {
     opacity: 0;
@@ -120,6 +118,7 @@
     &__wrap {
       display: grid;
       grid-template-columns: 1fr 1fr;
+      grid-gap: 15px;
     }
     &__tape {
       display: grid;
