--- a/src/styles/tape/post.module.scss
+++ b/src/styles/tape/post.module.scss
@@ -4,7 +4,10 @@
   height: auto;
 
   position: relative;
-  animation: image .7s forwards;
+  animation: image 0.7s forwards;
+  height: 100%;
+  max-height: 500px;
+  
 
   cursor: pointer;
   &__text {
@@ -29,7 +32,9 @@
     overflow-y: hidden;
     display: block;
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
+    
   }
 }
 @keyframes image {
