--- a/src/styles/tape/post.module.scss
+++ b/src/styles/tape/post.module.scss
@@ -6,12 +6,14 @@
   position: relative;
   animation: image 0.7s forwards;
   height: 100%;
+  margin-top: 10px;
   max-height: 500px;
   
 
   cursor: pointer;
   &__text {
     text-align: right;
+    width: 100%;
     padding: 1px 3px;
 
     padding-top: 0px;
@@ -20,7 +22,7 @@
     top: 0px;
 
     position: absolute;
-
+    right: 0;
     background-size: cover;
     font-size: 14px;
     font-family: GeosansLight;
