--- a/src/styles/createPost/createPost.module.scss
+++ b/src/styles/createPost/createPost.module.scss
@@ -28,10 +28,10 @@
     height: auto;
     display: block;
     &_wrap {
-     
       display: block;
       height: auto;
       position: relative;
+
       &::before {
         content: "";
         width: 50px;
@@ -65,6 +65,7 @@
       height: 100%;
       opacity: 0;
       height: 90px;
+      cursor: pointer;
     }
   }
 
@@ -78,10 +79,15 @@
     outline: none;
     font-size: 20px;
     padding: 15px;
-
+    cursor: pointer;
     color: rgb(134, 134, 134);
+    transition: all 0.3s;
+    &:hover {
+      opacity: 0.8;
+    }
   }
   &__uploaded {
+    width: 100%;
     margin-top: 30px;
   }
   &__group {
