--- a/src/styles/tape/post.module.scss
+++ b/src/styles/tape/post.module.scss
@@ -1,21 +1,25 @@
 .image {
-  overflow-y: hidden;
+  overflow: hidden;
   background-color: #070406;
   height: auto;
-
   position: relative;
   animation: image 0.7s forwards;
-  height: 100%;
-  margin-top: 10px;
   max-height: 500px;
-  
 
   cursor: pointer;
+
+  &__sub {
+    top: 30% !important;
+    width: 40% !important;
+    height: 40% !important;
+    left: 30% !important;
+  }
   &__text {
     text-align: right;
     width: 100%;
     padding: 1px 3px;
-
+    display: block;
+    margin-block-start: 0;
     padding-top: 0px;
     height: 18px;
     width: 45px;
@@ -36,16 +40,15 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
   }
 }
 @keyframes image {
   0% {
-    transform: translateY(200%);
+    transform: scale(3);
     opacity: 0;
   }
   100% {
-    transform: translateY(0%);
+    transform: scale(1);
     opacity: 1;
   }
 }
