--- a/src/styles/createPost/createPost.module.scss
+++ b/src/styles/createPost/createPost.module.scss
@@ -1,6 +1,6 @@
 @import "../../utils/variables.scss";
 .form__wrapper {
-  max-width: 1200px;
+  max-width: 800px;
   padding: 20px;
   margin: 0 auto;
 }
@@ -91,6 +91,8 @@
     margin-top: 30px;
   }
   &__group {
+    animation: animateInput  0.7s forwards;
+    
     position: relative;
     margin-top: 40px;
     color: $text;
@@ -127,5 +129,28 @@
     top: 0px;
     position: absolute;
     overflow: hidden;
+  }
+}
+
+.not__auth {
+  color: $text;
+  font-size: 22px;
+  text-align: center;
+  margin-top: 20px;
+
+  &_link {
+    color: $text;
+    border-bottom: 1px solid $text;
+  }
+}
+
+@keyframes animateInput {
+  0% {
+    transform: translateY(200%);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
   }
 }
