--- a/src/styles/search/card/Card.module.scss
+++ b/src/styles/search/card/Card.module.scss
@@ -45,6 +45,10 @@
 }
 
 @media (max-width: 500px) {
+  .card{
+    height: 150px;
+    margin: 0;
+  }
   .title {
     padding: 0px;
   }
@@ -52,6 +56,14 @@
     transition: all 0.1s;
   }
 }
+
+@media (max-width: 820px) {
+  .card{
+    height: 250px;
+  }
+}
+
+
 @keyframes card {
   0% {
     opacity: 0;
