--- a/src/styles/tape/post.module.scss
+++ b/src/styles/tape/post.module.scss
@@ -4,7 +4,6 @@
   height: auto;
   position: relative;
   animation: image 0.7s forwards;
-  max-height: 500px;
 
   cursor: pointer;
 
@@ -40,6 +39,11 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+}
+@media (max-width: 500px) {
+  .image {
+    max-height: 500px;
   }
 }
 @keyframes image {
