--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@ body {
   margin-bottom: 5px;
 }
 
-.swiper-top img {
+.swiper-top, .swiper-create img {
   display: block;
   width: 100%;
   height: 100%;
