fix tape component, decompose components

--- a/src/styles/user/user.module.scss
+++ b/src/styles/user/user.module.scss
@@ -6,17 +6,23 @@
   overflow: hidden;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  padding: 0 10px;
 
-  & p {
-    top: 40px !important;
-  }
   grid-gap: 10px;
 }
 
 .user {
   max-width: 1200px;
   margin: 0 auto;
+
+  &__block {
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+    justify-content: space-between;
+  }
+  &__avatar {
+    height: 100%;
+  }
 
   &__title {
     font-size: 35px;
@@ -78,13 +84,10 @@
   }
 }
 
-
-
 @media (min-width: 1200px) {
   .images {
     grid-template-columns: repeat(3, 1fr);
     & img {
-      margin-top: 40px;
       height: 386px !important;
     }
   }
@@ -96,28 +99,17 @@
   }
   .images {
     grid-template-columns: repeat(3, 1fr) !important;
-    max-width: 98%;
-    margin: 0 auto;
     & img {
       height: 280px;
     }
-
-    & p {
-      top: 0 !important;
-    }
   }
 }
-
 
 @media (max-width: 700px) {
   .images {
     grid-template-columns: repeat(1, 1fr) !important;
     & img {
-      margin-top: 40px !important;
       height: 375px !important;
-    }
-    & p {
-      top: 40px !important;
     }
   }
   .user {
@@ -129,10 +121,9 @@
   }
 }
 
-
 @media (max-width: 900px) {
-  .images{
-    & img{
+  .images {
+    & img {
       height: 240px;
     }
   }
