--- a/src/styles/search/card/Card.module.scss
+++ b/src/styles/search/card/Card.module.scss
@@ -8,7 +8,7 @@
   position: relative;
   padding: 20px;
   border-radius: 20px;
-  height: 200px;
+
   font-size: 20px;
   font-weight: 600;
 
@@ -44,8 +44,8 @@
   }
 }
 
-@media (max-width: 500px) {
-  .card{
+@media (min-width: 300px) {
+  .card {
     height: 150px;
     margin: 0;
   }
@@ -57,12 +57,18 @@
   }
 }
 
-@media (max-width: 820px) {
-  .card{
-    height: 250px;
+
+@media (min-width: 500px) {
+  .card {
+    height: 200px;
   }
 }
 
+@media (min-width: 820px) {
+  .card {
+    height: 250px;
+  }
+}
 
 @keyframes card {
   0% {
