--- a/src/styles/user/user.module.scss
+++ b/src/styles/user/user.module.scss
@@ -16,18 +16,20 @@
 
   &__block {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     margin-top: 40px;
     justify-content: space-between;
   }
-  &__avatar {
-    height: 100%;
+  &__avatar img {
+    height: 150px;
+
+    width: 150px;
   }
 
   &__title {
     font-size: 35px;
     font-weight: 600;
-    margin-top: 20px;
+  
     color: $text;
   }
   &__subtitle {
