--- a/src/styles/image/image.module.scss
+++ b/src/styles/image/image.module.scss
@@ -118,21 +118,31 @@
   .image {
     &__wrap {
       display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-gap: 15px;
+      grid-template-columns: repeat(2, 1fr);
+
+      grid-gap: 10px;
     }
     &__tape {
       display: grid;
-      grid-template-columns: repeat(8, 1fr);
-      grid-template-rows: repeat(8, 5vw);
-      grid-gap: 5px;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 10px;
       &_item {
         display: block;
         width: 100%;
         height: 100%;
         object-fit: cover;
       }
+      
     }
+    &__gif {
+      height: 100%;
+      object-fit: cover;
+      width: 100%;
+    }
+  }
+
+  .gif__wrap {
+    width: 100%;
   }
 }
 
@@ -153,5 +163,24 @@
     &__gif {
       height: 100%;
     }
+    &__wrapper {
+      height: 100%;
+    }
   }
+}
+
+@media (min-width: 820px) {
+  .gif__wrap img {
+    max-height: 70vh;
+    object-fit: cover;
+  }
+}
+
+
+
+.h100{
+  height: 100%;
+}
+.hA{
+  height: auto !important;
 }
