--- a/src/styles/NavBar/account/account.module.scss
+++ b/src/styles/NavBar/account/account.module.scss
@@ -4,7 +4,8 @@
   color: white;
   margin-top: -18px;
   position: absolute;
-  right: 10%;
+  right: 0%;
+  margin-right: 120px;
   justify-content: end;
 
   &__balance {
