--- a/src/styles/NavBar/NavBar.scss
+++ b/src/styles/NavBar/NavBar.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 67px;
   margin-top: 0px;
-
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   background-color: #070406;
   border-bottom: 1px solid #626262;
   display: flex;
