--- a/src/styles/tape/post.scss
+++ b/src/styles/tape/post.scss
@@ -5,6 +5,7 @@
   position: relative;
   animation: image 0.4s forwards;
   cursor: pointer;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   &__item {
     object-fit: cover;
     width: 100%;
