--- a/src/styles/tape/tape.scss
+++ b/src/styles/tape/tape.scss
@@ -8,6 +8,7 @@
   margin-inline-end: 0px;
   padding-inline-start: 0px;
   list-style-type: none;
+  overflow-y: hidden;
 }
 @media (max-aspect-ratio: 3/4) {
   .images {
