--- a/src/styles/image/image.module.scss
+++ b/src/styles/image/image.module.scss
@@ -19,6 +19,7 @@
   }
   &__likes {
     & img {
+      opacity: .5;
       width: 40px;
       margin-right: 10px;
     }
@@ -39,6 +40,7 @@
     cursor: pointer;
     width: 40px;
     height: 40px;
+    opacity: .5;
   }
 
   &__description {
