--- a/src/styles/edit/edit.module.scss
+++ b/src/styles/edit/edit.module.scss
@@ -100,3 +100,31 @@
     object-fit: unset !important;
   }
 }
+
+.form__file {
+  &_wrap {
+    display: block;
+    height: auto;
+    position: relative;
+  }
+  &_icon {
+    width: 70px !important;
+    height: 70px !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+  }
+  & input {
+    font-size: 0;
+    background-color: black;
+    z-index: 200;
+    display: block;
+    width: 100%;
+    opacity: 0;
+    height: 90px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+  }
+}
