--- a/src/styles/createPost/createPost.module.scss
+++ b/src/styles/createPost/createPost.module.scss
@@ -38,47 +38,37 @@
     }
   }
   &__file {
-    height: auto;
     display: block;
-    &_wrap {
-      display: block;
-      height: auto;
-      position: relative;
-
-      &::before {
-        content: "";
-        width: 50px;
-        height: 4px;
-        top: 50%;
-        margin-top: -2px;
-        left: 50%;
-        margin-left: -25px;
-        background-color: $text;
-        position: absolute;
-      }
-      &::after {
-        content: "";
-        position: absolute;
-        height: 50px;
-        background-color: $text;
-        width: 4px;
-        margin-top: -25px;
-        top: 50%;
-        left: 50%;
-        margin-left: -2px;
-      }
-    }
-
+    position: relative;
+    min-height: 100px;
+    height: 100%;
     & input {
       font-size: 0;
       background-color: black;
-      z-index: -1;
+      z-index: 300;
       display: block;
-      width: 100%;
-      height: 100%;
+      width: 100px;
+      height: 100px;
       opacity: 0;
-      height: 90px;
+
       cursor: pointer;
+      position: absolute;
+      background-image: url("../../../assets/icons/plus.svg");
+      top: 50%;
+      margin-top: -50px;
+      left: 50%;
+      margin-left: -50px;
+    }
+    &_img {
+      position: absolute;
+      width: 100px !important;
+      height: 100px !important;
+      opacity: 0.5;
+      object-fit: unset !important;
+      top: 50%;
+      margin-top: -50px;
+      left: 50%;
+      margin-left: -50px;
     }
   }
 
@@ -98,8 +88,8 @@
     &:hover {
       opacity: 0.8;
     }
-    &:disabled{
-      opacity: .3;
+    &:disabled {
+      opacity: 0.3;
     }
   }
   &__uploaded {
