--- a/src/styles/user/user.module.scss
+++ b/src/styles/user/user.module.scss
@@ -53,14 +53,16 @@
     height: 40px;
   }
   &__icons {
+    transform: translateX(0px);
     display: flex;
-  }
-
-  .icon {
-    display: none;
-  }
-  .active {
-    display: block;
+    &_item {
+      display: none;
+      animation: test 0.5s forwards;
+    }
+    &_active {
+      display: block;
+      animation: test 0.5s forwards;
+    }
   }
 }
 
@@ -77,5 +79,14 @@
     &__title {
       font-size: 28px;
     }
+  }
+}
+
+@keyframes test {
+  0% {
+    transform: scale(.1);
+  }
+  100% {
+    transform: scale(1);
   }
 }
